--- a/surfaceroughness_env.yml
+++ b/surfaceroughness_env.yml
@@ -3,15 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - os
-  - warnings
-  - time
-  - glob
-  - datetime
-  - ftplib
-  - tarfile
-  - tempfile
-  - shutil
+  - python
   - netcdf4
   - tqdm
   - numpy
@@ -19,6 +11,7 @@ dependencies:
   - rasterio
   - xarray
   - scipy
+  - matplotlib
   - pip
   - pip:
       - landsatxplore
